# APP-SerialPortUtility

./: .gitignore  README.md  SerialPortAccess.sln  Toolchains.txt  Windows Drivers.txt  toolchain.txt
BuildAll/: .project
Com0Com/: .cproject  .gitignore  .project  com0com.txt
ConsoleTerminal/: .cproject  .project  serialportterminal.cpp  serialportterminal.h
JSerialOverEthernet/: .project  build.gradle  settings.gradle
JSerialPortAccess/: .project  build.gradle  settings.gradle
LibCom0Com/: .cproject  .gitignore  .project  com0com.txt
LinSerialPortAccess/: .cproject  .gitignore  .project  serial_port.cpp  serial_port.h  serial_port_jni.cpp  serialportaccess.cpp
LinSystemD/: README.txt  server-start.sh  soe-server.service
NetworkAccess/: .cproject  .project  network.hpp  winnet.cpp
NetworkTCPStreamAccess/: .cproject  .gitignore  .project  linnet.cpp  network.h  winnet.cpp
SerialOverEthernet/: .cproject  .gitignore  .project  Protokoll.xlsx  serial_over_ethernet.cpp  serial_over_ethernet.h  soeclient.cpp  soeclient.h  soeclient_handler.cpp  (+8 more)
SerialPortAccess/: .cproject  .gitignore  .project  CMakeLists.txt  SerialPortAccess.vcxproj  SerialPortAccess.vcxproj.filters  serial_port.cpp  serial_port.h  serial_port.hpp  serial_port_jni.cpp  serial_port_lin.cpp  serial_port_win.cpp  serialportaccess.cpp  tc-amd-64-win.cmake
SerialPortAccess/build_amd64_win/: CMakeCache.txt  Makefile  cmake_install.cmake
SerialPortAccess/src/cpp/public/: serial_port.hpp
SerialPortAccess/src/cpp/source/: serial_port_jni.cpp  serial_port_lin.cpp  serial_port_win.cpp
(+150 files in other folders)
